mod: 移除util工具包。开放getDefaultBuilder()和getDefaultServletBuilder()方法，方便用户性能调优及加入自定义的servlet/filter。

--- a/nutz-plugins-undertow/src/main/java/org/nutz/plugins/undertow/welcome/index.html.tmpl
+++ b/nutz-plugins-undertow/src/main/java/org/nutz/plugins/undertow/welcome/index.html.tmpl
@@ -12,7 +12,8 @@
 		<h1>nutz plugins for undertow</h1>
 		<div style="height:20px"></div>
 		<h2>欢迎使用undertow插件</h2>
-		<h2>请添加web.properties文件，设置web.modules为你自己的主模块</h2>
+		<p>看到此页面，说明undertow插件已正常运行。插件默认使用了内置的DefaultModule做为主模块。</br>
+		请在源码根目录添加web.properties文件，并设置web.modules属性为你自己的主模块类。</p>
 		<div style="height:20px"></div>
 		<p class="masthead-button-links">
 		  <a class="btn btn-lg btn-primary btn-shadow" href="https://github.com/nutzam/nutzmore/tree/master/nutz-plugins-undertow" target="_blank" role="button">插件更详细使用说明</a>
